<resources>
    <string name="app_name">Prize Winner Game</string>
    <string name="home_title">Prize Winner</string>
    <string name="setup_quiz">Setup Quiz</string>
    <string name="play_quiz">Play Quiz</string>
    <string name="quiz_title">Quiz Title:</string>
    <string name="quiz_title_hint">e.g. Theatre Quiz</string>
    <string name="title_activity_edit_question">EditQuestionActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="question_title">Question Title</string>
    <string name="edit_question_choice_a">Choice A</string>
    <string name="edit_question_choice_a_example">e.g. Blue</string>
    <string name="question_title_hint">e.g. What is the colour of the sky?</string>
    <string name="default_edit_question_title">New Question</string>
    <string name="new_question_image">New Question Image</string>
    <string name="save_question">Save Question</string>
    <string name="edit_question_choice_b_example">e.g. Red</string>
    <string name="edit_question_choice_b">Choice B</string>
    <string name="string_empty_string">---</string>
    <string name="correct_answer_a">A</string>
    <string name="correct_answer_b">B</string>
    <string name="save_quiz">Save Quiz</string>
    <string name="select_question_image">Select Question Image</string>
    <string name="image_index_prefix">"Image Index: "</string>
    <string name="correct_answer_default">A</string>
    <string name="edit_correct_answer">Correct Answer</string>
    <string name="save_prize">Save Prize</string>
    <string name="select_prize_image">Select Prize Image</string>
    <string name="prize_title">Prize Title</string>
    <string name="prize_input_hint">e.g. Chocolate</string>
    <string name="new_prize_image">New Prize Image</string>
    <string name="default_edit_prize_title">New Prize</string>
    <string name="time_limit_hint">60</string>
    <string name="time_limit_title">Time Limit in Seconds</string>
    <string name="how_to_play_title">How To Play</string>
    <string name="how_to_play_instructions">In this timed quiz, answer as many questions correctly as possible to win prizes! Choose from two possible correct answers per question. For each question answered correctly, you get to pick a prize you win! But the prizes have been ordered randomly and hidden. Once the timer runs out, if you have collected all the prizes - well done! Otherwise you have a choice to make: you can take the current prizes, OR you can trade them for one final question. If you get it right, you automatically win all of the prizes! But if not, you walk away empty-handed. Good luck!</string>
    <string name="next">Next</string>
    <string name="exit">Exit</string>
    <string name="you_could_win">You Could Win...</string>
    <string name="back">Back</string>
    <string name="prize_grid_instructions">The prizes have now been hidden and mixed up. Each time you get an answer correct, you will come back to this screen. Then, tap a hidden prize as fast as you can to collect it see the next question!</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="title_activity_quiz_question">QuizQuestionActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pick_a_prize">Correct!\n Pick a Prize:</string>
    <string name="true_empty" />
    <string name="take_prizes">Take Current Prizes</string>
    <string name="take_trade">Take Trade</string>
    <string name="won_no_prizes">You didn\'t win any prizes. But you can answer one final question with unlimited time to win them all!</string>
    <string name="leave_without_prizes">Leave Without Prizes</string>
    <string name="won_some_prizes">You won some awesome prizes! But you can trade them for one final question in hopes of winning them all... but if you answer incorrectly, you lose the prizes you already have. Take the trade?</string>
    <string name="won_all_prizes">You have won all of these amazing prizes! Congratulations!</string>
    <string name="finish">Finish</string>
    <string name="final_question">Final Question</string>
    <string name="questions">Questions</string>
    <string name="prizes">Prizes</string>
    <string name="won_no_prizes_final">Unfortunately, you answered incorrectly and have lost the prizes. Better luck next time!</string>
    <string name="won_all_prizes_final">You answered correctly and won all the prizes! Congratulations!</string>
    <string name="add_new_question">Add New Question</string>
    <string name="delete_question">Delete</string>
</resources>