<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:layout_margin="10dp"
    app:cardElevation="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:id="@+id/imageViewQuestionImage"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/new_question_image"
            android:background="@drawable/question_mark"/>

        <TextView
            android:id="@+id/textViewQuestionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/default_edit_question_title"
            android:textSize="20sp"
            android:fontFamily="casual"
            android:textColor="@color/dark_blue"/>
        <TextView
            android:id="@+id/textViewQuestionChoiceA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/string_empty_string"
            android:textSize="16sp"
            android:fontFamily="casual"/>
        <TextView
            android:id="@+id/textViewQuestionChoiceB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/string_empty_string"
            android:textSize="16sp"
            android:fontFamily="casual"/>
        <TextView
            android:id="@+id/textViewCorrectAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/correct_answer_a"
            android:textStyle="bold"
            android:textColor="@color/mint_green"
            android:textSize="16sp"
            android:fontFamily="casual"
            />

        <Button
            android:id="@+id/btnDeleteQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:backgroundTint="@color/warning_red"
            android:padding="2dp"
            android:fontFamily="casual"
            android:text="@string/delete_question"
            android:textSize="16sp" />
    </LinearLayout>

</androidx.cardview.widget.CardView>