<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".QuizInstructions"
    android:background="@drawable/rainbow_blur">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="casual"
        android:layout_gravity="center"
        android:text="@string/how_to_play_title"
        android:textColor="@color/white"
        android:textSize="45sp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="64dp"
        android:padding="32dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="48dp"
            android:text="@string/how_to_play_instructions"
            android:fontFamily="casual"
            android:textStyle="bold"
            android:textSize="24sp"/>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="64dp"
        android:paddingVertical="8dp"
        android:layout_marginHorizontal="64dp"
        android:layout_marginVertical="16dp"
        android:text="@string/next"
        android:fontFamily="casual"
        android:textSize="40dp"
        android:backgroundTint="@color/mint_green"/>

    <Button
        android:id="@+id/btnExit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="64dp"
        android:paddingVertical="8dp"
        android:layout_marginHorizontal="64dp"
        android:layout_marginVertical="32dp"
        android:text="@string/exit"
        android:fontFamily="casual"
        android:textSize="40dp"
        android:backgroundTint="@color/warning_red"/>
</LinearLayout>