<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    tools:context=".EditQuestionActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textViewQuestionTitle"
                android:layout_marginStart="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_title"
                android:textSize="30sp"
                android:fontFamily="casual"
                android:contentDescription="@string/question_title"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/textInputQuestionTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/appCompatEditTextQuestionTitle"
                    android:layout_width="299dp"
                    android:layout_height="56dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:hint="@string/question_title_hint"
                    android:labelFor="@+id/textViewQuestionTitle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
        <LinearLayout
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textViewQuestionChoiceA"
                android:layout_marginStart="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_question_choice_a"
                android:textSize="30sp"
                android:fontFamily="casual"
                android:contentDescription="@string/edit_question_choice_a"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/textInputQuestionChoiceA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/appCompatEditTextQuestionChoiceA"
                    android:layout_width="299dp"
                    android:layout_height="56dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:hint="@string/edit_question_choice_a_example"
                    android:labelFor="@+id/textViewQuestionChoiceA"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
        <LinearLayout
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textViewQuestionChoiceB"
                android:layout_marginStart="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_question_choice_b"
                android:textSize="30sp"
                android:fontFamily="casual"
                android:contentDescription="@string/edit_question_choice_b"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/textInputQuestionChoiceB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/appCompatEditTextQuestionChoiceB"
                    android:layout_width="299dp"
                    android:layout_height="56dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:hint="@string/edit_question_choice_b_example"
                    android:labelFor="@+id/textViewQuestionChoiceB"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
        <LinearLayout
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textViewCorrectAnswer"
                android:layout_marginStart="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_correct_answer"
                android:textSize="30sp"
                android:fontFamily="casual"
                android:contentDescription="@string/edit_correct_answer"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/textInputCorrectAnswer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/appCompatEditTextCorrectAnswer"
                    android:layout_width="299dp"
                    android:layout_height="56dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:hint="@string/correct_answer_default"
                    android:labelFor="@+id/textViewQuestionTitle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:maxLength="1"
                    android:digits="AB"
                    tools:text="@string/correct_answer_default"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </LinearLayout>
    <ImageView
        android:id="@+id/imageViewQuestionImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_weight="1"
        android:background="@drawable/question_mark"
        tools:background="@drawable/question_mark"
        android:layout_margin="32dp"
        android:contentDescription="@string/select_question_image"/>
    <Button
        android:id="@+id/btnSelectQuestionImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:fontFamily="casual"
        android:text="@string/select_question_image"
        android:textColor="@color/white"
        android:backgroundTint="@color/dark_blue"
        android:layout_margin="16dp"/>
        <Button
            android:id="@+id/btnSaveQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:fontFamily="casual"
            android:text="@string/save_question"
            android:textColor="@color/white"
            android:backgroundTint="@color/mint_green"
            android:layout_margin="16dp"/>

    </LinearLayout>
</ScrollView>