<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrizeShowcaseActivity"
    android:orientation="vertical"
    android:background="@drawable/rainbow_blur">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/you_could_win"
        android:layout_marginTop="64dp"
        android:fontFamily="casual"
        android:textSize="44dp"
        android:textColor="@color/white"/>

    <ImageView
        android:layout_gravity="center"
        android:id="@+id/imageViewPrizeShowcase"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_marginTop="64dp"
        android:layout_marginHorizontal="128dp"
        android:layout_marginBottom="32dp"
        tools:background="@drawable/gift"/>

    <TextView
        android:id="@+id/textViewPrizeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        tools:text="@string/prize_title"
        android:layout_marginTop="32dp"
        android:fontFamily="casual"
        android:textSize="44dp"
        android:textColor="@color/white"/>

    <ProgressBar
        android:id="@+id/progressBarPrizeShowcase"
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:layout_marginVertical="42dp"
        android:layout_marginHorizontal="64dp"
        android:background="@color/white"
        style="?android:attr/progressBarStyleHorizontal"
        android:progress="0"
        tools:progress="3"
        android:max="9" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="64dp"
        android:paddingVertical="8dp"
        android:layout_marginHorizontal="64dp"
        android:layout_marginVertical="16dp"
        android:text="@string/next"
        android:fontFamily="casual"
        android:textSize="40dp"
        android:backgroundTint="@color/mint_green"/>

    <Button
        android:id="@+id/btnBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="64dp"
        android:paddingVertical="8dp"
        android:layout_marginHorizontal="64dp"
        android:layout_marginVertical="32dp"
        android:text="@string/back"
        android:fontFamily="casual"
        android:textSize="40dp"
        android:backgroundTint="@color/warning_red"/>
</LinearLayout>