<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FinalQuizQuestionActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textViewQuestionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            tools:text="Where do fish swim?"
            android:layout_marginTop="64dp"
            android:fontFamily="casual"
            android:textSize="44sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <ImageView
            android:id="@+id/imageViewQuestionImage"
            android:layout_width="300dp"
            android:layout_height="300dp"
            tools:background="@drawable/rainbow_blur"
            android:layout_gravity="center"
            android:layout_marginVertical="32dp"
            android:contentDescription="@string/new_question_image"/>

        <TextView
            android:id="@+id/textViewChoiceA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingVertical="20dp"
            android:layout_marginVertical="64dp"
            android:layout_marginHorizontal="96dp"
            android:text="@string/edit_question_choice_a"
            android:background="@drawable/default_question_button_style"
            android:textStyle="bold"
            android:fontFamily="casual"
            android:textSize="32sp"
            android:clickable="true"
            android:focusable="true" />

        <TextView
            android:id="@+id/textViewChoiceB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingVertical="20dp"
            android:layout_marginVertical="16dp"
            android:layout_marginHorizontal="96dp"
            android:text="@string/edit_question_choice_b"
            android:background="@drawable/default_question_button_style"
            android:textStyle="bold"
            android:fontFamily="casual"
            android:textSize="32sp"
            android:clickable="true"
            android:focusable="true" />
    </LinearLayout>
</LinearLayout>